soluciones/test/laravel/laravel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: ingress-laravel
   namespace: laravel
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: haproxy
  rules:
  - host: dev.luiso.com
    http:
      paths:
      - path: /luiso
        pathType: Exact
        backend:
          service:
            name: laravel-service
            port:
              number: 8000

---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: haproxy
  namespace: laravel
spec:
  controller: haproxy.org/ingress-controller
