soluciones/test/laravel/laravel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: laravel
spec:
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30456
  selector:
    app: laravel
  type: NodePort
